<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="block">Block all calls</string>
    <string name="blocku">Block unsaved numbers</string>
     <string name="blockl">Block from list</string>
      <string name="blockc">Cancel all block</string>
      <string name="smart">smart IT solution</string>
       <string name="addnumber">Add Number</string>
        <string name="showlist">Show List</string>
        <string name="add">Add</string>
        <string name="delete">delete</string>
        <string name="cancel">Cancel</string>
        <string name="menu_settings">settings</string>
        <string name="app_name">Call Blocker</string>
        <string name="enter_number">Enter Phone Number</string>
        <string name="no_add">N0_numbers_added</string>
        <string name="TextView">TextView</string>
    
    

</resources>
